# Progetto_Steam_Rec

./: .gitignore  Makefile  README.md  pyproject.toml
src/: __init__.py  config.py  data_loader.py  main.py  rag_engine.py  service.py  vector_store.py
